<?xml version="1.0"?>
<package format="2">
  <name>canopen_401</name>
  <version>0.0.0</version>
  <description>The canopen_401 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="ugcxt@student.kit.edu">Lennart Gilbert</maintainer>

  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>canopen_master</depend>
  <depend>class_loader</depend>

  <export>
    <canopen_401 plugin="${prefix}/canopen_401_plugin.xml" />
  </export>
</package>