<?xml version="1.0"?>
<package>
  <name>canopen_led_node</name>
  <version>0.0.0</version>
  <description>The canopen_led_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="lenanrt.gilbert@student.kit.edu">Lennart Gilbert</maintainer>
  <author email="lenanrt.gilbert@student.kit.edu">Lennart Gilbert</author>
  <author email="jan.meurer@student.kit.edu">Jan Meurer</author>
  
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>canopen_chain_node</build_depend>
  <build_depend>canopen_401</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>canopen_chain_node</run_depend>
  <run_depend>canopen_401</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>